<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="@dimen/dp150"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dp6">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:id="@+id/relativeLayout"
            app:cardCornerRadius="@dimen/dp8"
            app:cardElevation="@dimen/dp2"
            android:background="@drawable/rounded_white_smoke_bg"
            android:padding="@dimen/dp2"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/food_image"
                android:layout_width="@dimen/dp150"
                android:layout_height="@dimen/dp150"
                android:src="@mipmap/foodimage"
                android:scaleType="fitXY"
                />
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp8"
                android:layout_marginBottom="@dimen/dp8">
                <in.mummysfood.widgets.CkdTextview
                    android:id="@+id/populor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textColor="@color/colorPrimary"
                    style="@style/textviewregular"/>
                <in.mummysfood.widgets.CkdTextview
                    android:id="@+id/food_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jain_mini_thali"
                    android:textColor="@color/black"
                    style="@style/textviewregular"
                    android:maxLines="2"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <in.mummysfood.widgets.CkdTextview
                        android:id="@+id/food_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/colorPrimary"
                        android:layout_alignParentStart="true"
                        style="@style/textviewregular"/>
                    <in.mummysfood.widgets.CkdTextview
                        android:id="@+id/chef_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pilot_name"
                        android:maxLength="8"
                        android:ellipsize="end"
                        android:layout_marginRight="@dimen/dp8"
                        android:layout_alignParentEnd="true"
                        style="@style/textviewregular"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>