<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white_smoke">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="@dimen/dp24">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/dp100"
            android:layout_height="@dimen/dp100"
            android:src="@mipmap/default_usr_img"
            app:civ_border_color="@color/white_smoke"
            app:civ_border_width="@dimen/dp2"
            app:civ_shadow="false"
            android:layout_gravity="center_horizontal"/>
        <in.ckd.calenderkhanado.widgets.CkdTextview
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/textviewbold"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp8"
        android:background="@color/white"
        android:padding="@dimen/dp24">
        <RelativeLayout
            android:id="@+id/manage_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <in.ckd.calenderkhanado.widgets.CkdTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_address"
                android:textSize="@dimen/sp16"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_right_arrow"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/your_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16">
            <in.ckd.calenderkhanado.widgets.CkdTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_order"
                android:textSize="@dimen/sp16"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_right_arrow"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/manage_payment_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16">
            <in.ckd.calenderkhanado.widgets.CkdTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_payment_option"
                android:textSize="@dimen/sp16"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_right_arrow"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/notification_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16">
            <in.ckd.calenderkhanado.widgets.CkdTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_setting"
                android:textSize="@dimen/sp16"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_right_arrow"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/help_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16">
            <in.ckd.calenderkhanado.widgets.CkdTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_support"
                android:textSize="@dimen/sp16"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_right_arrow"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp24"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp8">
        <in.ckd.calenderkhanado.widgets.CkdTextview
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            style="@style/textviewbold"
            android:textSize="@dimen/sp16"
            android:textAllCaps="true"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>
