<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="@dimen/dp24"
    android:layout_marginEnd="@dimen/dp24"
    android:layout_marginTop="@dimen/dp16"
    android:layout_marginBottom="@dimen/dp16">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/home_icon"
        android:id="@+id/typeImage"
        android:tint="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dp8">
        <in.ckd.calenderkhanado.widgets.CkdTextview
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textviewregular"
            android:textColor="@color/black"
            android:id="@+id/addressType"
            android:text="@string/title_home"/>
        <in.ckd.calenderkhanado.widgets.CkdTextview
            android:id="@+id/addressTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textviewregular"
            android:textColor="@color/gray"
            android:layout_marginTop="@dimen/dp8"
            android:text="Ch-19, Scheme No.74c, Vijay Nagar, Indore, Madhya Pradesh 452010, India"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp8">
            <in.ckd.calenderkhanado.widgets.CkdTextview
                android:id="@+id/editAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textviewregular"
                android:textColor="@color/colorPrimary"
                android:text="@string/edit"
                android:textAllCaps="true"/>
            <in.ckd.calenderkhanado.widgets.CkdTextview
                android:id="@+id/deleteAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textviewregular"
                android:textColor="@color/colorPrimary"
                android:text="@string/delete"
                android:textAllCaps="true"
                android:layout_marginStart="@dimen/dp24"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>