<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.mummysfood.fragments.HomeFragment"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/dp16"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:src="@mipmap/profile_icon"/>
                    <in.mummysfood.widgets.CkdTextview
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textviewbold"
                        android:textColor="@color/white"
                        android:text="@string/app_name"
                        android:textAllCaps="true"
                        android:layout_centerHorizontal="true"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@mipmap/profile_icon"/>
                </RelativeLayout>
                <android.support.v7.widget.SearchView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_white_smoke_bg"
                    android:layout_marginTop="@dimen/dp16"
                    app:queryHint="@string/home_search"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/filter_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp12"
                android:visibility="gone"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/dp12">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <in.mummysfood.widgets.CkdTextview
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recommended"
                        style="@style/textviewregular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp16"/>
                    <in.mummysfood.widgets.CkdTextview
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_all"
                        style="@style/textviewregular"
                        android:textColor="@color/colorPrimary"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recommended_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/dp12">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <in.mummysfood.widgets.CkdTextview
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food_near_you"
                        style="@style/textviewregular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16"/>
                    <in.mummysfood.widgets.CkdTextview
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_all"
                        style="@style/textviewregular"
                        android:textColor="@color/colorPrimary"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/near_you_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
